logo alignment fix

--- a/packages/web/app/components/logo/logo-with-text.module.scss
+++ b/packages/web/app/components/logo/logo-with-text.module.scss
@@ -29,6 +29,8 @@ a.logo {
 }
 
 .logoIcon {
+    display: flex;
+    align-items: center;
     margin-top: -0.1rem;
     color: var(--color-text-300);
 }
